--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.9.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.31.0"
   },
   "devDependencies": {
